--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
 
 
     <section class="signin-section">
-      <div class="container shadow-sm p-5 mt-5 mb-5 bg-body rounded">
+      <div class="container shadow-lg p-5 mt-5 mb-5 bg-body rounded">
         <h1 class="p-5 ms-4">Sign in</h1>
         <div class="row gy-3">
-          <div class="signup-image col-12 col-md-6 col-lg-6">
+          <div class="signin-image col-12 col-md-6 col-lg-6">
             <figure><img src="images/signin-image.jpg" alt="sing up image" class="img-fluid w-75"></figure>
             <a href="#" class="signup-image-link text-dark">Create an account</a>
           </div>
