--- a/index.html
+++ b/index.html
@@ -18,12 +18,18 @@
 
 <body style="background-color: #F8F8F8;">
 
-  <main class="">
+  <main>
+
+     <!-- Signup section -->
+
     <section class="signup-section">
       <div class="container shadow-lg p-5 mt-5 mb-5 bg-body rounded">
         <h1 class="p-5 ms-4">Sign up</h1>
         <div class="row gy-3">
           <div class="signup-area col-12 col-md-6 col-lg-6">
+
+             <!-- Signup input area -->
+
             <div class="input-group mb-3">
               <span class="material-icons col-form-label p-2">person</span>
               <input type="text" class="form-control" placeholder="Your Name" aria-label="Name"
@@ -59,6 +65,8 @@
             </div>
           </div>
 
+           <!-- Signup image -->
+
           <div class="signup-image col-12 col-md-6 col-lg-6">
             <figure><img src="images/signup-image.jpg" alt="sing up image" class="img-fluid ms-5"></figure>
             <a href="#" class="signup-image-link text-dark ms-5">I am already member</a>
@@ -68,17 +76,22 @@
       </div>
     </section>
 
+    <!-- Signin Section -->
 
     <section class="signin-section">
       <div class="container shadow-lg p-5 mt-5 mb-5 bg-body rounded">
         <h1 class="p-5 ms-4">Sign in</h1>
         <div class="row gy-3">
+
+          <!-- Signin image -->
+
           <div class="signin-image col-12 col-md-6 col-lg-6">
             <figure><img src="images/signin-image.jpg" alt="sing up image" class="img-fluid w-75"></figure>
             <a href="#" class="signup-image-link text-dark">Create an account</a>
           </div>
 
-
+          <!-- Signin input area -->
+          
           <div class="signin-area col-12 col-md-6 col-lg-6">
             <div class="input-group mb-3">
               <span class="material-icons col-form-label p-2">person</span>
